syntax = "proto3";
import public "ErrorList.proto";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";

message Direction
{
  string id = 1;
  string name = 2;
}

message  DirectionResponse
{
  oneof response {
    Direction result = 1;
    ErrorList error = 2;
  }
}