syntax = "proto3";
import public "ErrorList.proto";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";

message Locale
{
  string Code = 1;
  string Name = 2;
}

message  LocaleResponse
{
  oneof response {
    Locale result = 1;
    ErrorList error = 2;
  }
}