syntax = "proto3";
import public "ErrorList.proto";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";

message Vehicle
{
  string id = 1;
  int64 last_updated = 2;
  double latitude = 3;
  double longitude = 4;
  double heading = 5;
  int32 pattern = 6;
  double pattern_dist = 7;
  string route = 8;
  string destination = 9;
  bool is_delayed = 10;
  int32 speed = 11;
  string ta_trip_id = 12;
  string ta_block_id = 13;
  string original_ta_trip_id = 14;
  string zone = 15;
  int32 mode = 16;
  string passenger_load = 17;
  int32 scheduled_start_time = 18;
  string scheduled_start_date = 19;
}

message  VehicleResponse
{
  oneof response {
    Vehicle result = 1;
    ErrorList error = 2;
  }
}